20070624 ui/xlib/xdisplay.c: formatting fixes (part of bug #1686228) (Gergely
         Szasz).
20070624 ui/xlib/xui.c: set minsize WM hint so we don't resize down to
         nothing, and remove common factors from aspect hints (part of bug
         #1686228) (Gergely Szasz).
20070624 ui/xlib/xui.c: formatting fixes (part of bug #1686228) (Gergely
         Szasz).
20070625 sound/alsasound.c: reduce underruns in ALSA environment (fixes bug
         #1735390) (Gergely Szasz).
20070626 widget/options.pl: move widget posthook so that settings changes are
         available in the uidisplay_hotswap_gfx call (fixes bug #1743318)
         (Gergely Szasz).
20070628 zxatasp.c: remove dead code (Stuart).
20070628 machines/specplus3.c,trdos.c: use better variable names for temporary
	 disk image filenames (Stuart).
20070628 display.c,zxcf.h: remove warnings with -Wstrict-prototypes (Stuart).
20070628 machines/{pentagon.c,scorpion.c,spec16.c,spec48.c,spec_se.c,
	 specplus2a.c,tc2048.c},ui/scaler/scalers.c: remove "'static' is not at
	 beginning of declaration" warning with -Wextra (Stuart).
20070628 menu.h,ui/gtk/gtkjoystick.c: fix menu_options_joysticks_select()'s
	 prototype (Stuart).
20070628 pokefinder/pokefinder.[ch]: make pokefinder_{,im}possible's
	 declarations consistent with their definitions (Stuart).
20070628 ui/gtk/memory.c: fix type of menu_machine_memorybrowser() in its
	 declaration for the GTK+ UI (Stuart).
20070628 ui/gtk/memory.c: fix compilation (Stuart).
20070628 ChangeLog,compat.h,debugger/{breakpoint.c,commandl.l,commandy.y,
	 expression.c},display.c,event.c,hacking/{implementation_notes.txt,
	 input.txt,ui.txt},if1.c,machines/tc2068.c,memory.c,printer.c,
	 spectrum.c,tape.c,ui/xlib/{xdisplay.h,xerror.c},utils.[ch],
	 z80/{coretest.c,z80.c,z80_ops.c}: fix misspellings (Stuart).
20070629 widget/{widget.c,options.pl},ui/options.dat: move
         uidisplay_hotswap_gfx_mode directly to widget_options_finish (more
         from bug #1743318) (Gergely Szasz).